// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructor with only an option object attaches scaled images and applies options 1`] = `
<body>
  <img
    class="medium-zoom-image"
    width="200"
  />
  <img />
  <p />
</body>
`;

exports[`hide renders correctly 1`] = `
<body>
  <img
    class="medium-zoom-image"
  />
</body>
`;

exports[`show renders correctly 1`] = `
<body>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px;"
  />
</body>
`;

exports[`show renders correctly with options overlay background 1`] = `
<body>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(186, 218, 85);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px;"
  />
</body>
`;
